@@ -1,3 +1,9 @@
+2018-07-03  Richard Sandiford  <richard.sandiford@arm.com>
+
+	* tree-vect-patterns.c (vect_mark_pattern_stmts): Remove pattern
+	statements that have been replaced by further pattern statements.
+	(vect_pattern_recog_1): Clear STMT_VINFO_PATTERN_DEF_SEQ on failure.
+
 2018-07-03  Richard Biener  <rguenther@suse.de>
 
 	* tree-vect-stmts.c (vect_is_simple_use): Consolidate dumping,
